--- a/Runtime/Plugins/x86_64/PosePlugin.bundle/Contents/Info.plist
+++ b/Runtime/Plugins/x86_64/PosePlugin.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>22G436</string>
+	<string>23D56</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
